--- a/ntalk/views/home/index.ejs
+++ b/ntalk/views/home/index.ejs
@@ -1,30 +1,18 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Ntalk - Contacts</title>
-  </head>
+<% include ../header %>
+<header>
+  <h1>Ntalk</h1>
+  <h4>Welcome!</h4>
+</header>
 
-  <body>
-    <header>
-      <h1>Ntalk</h1>
-      <h4>Welcome!</h4>
-    </header>
+<section>
+  <form action="/entrar" method="post">
+    <input type="text" name="usuario[nome]" placeholder="Nome">
+    <br>
 
-    <section>
-      <form action="/entrar" method="post">
-        <input type="text" name="usuario[nome]" placeholder="Nome">
-        <br>
+    <input type="text" name="usuario[email]" placeholder="E-mail">
+    <br>
 
-        <input type="text" name="usuario[email]" placeholder="E-mail">
-        <br>
-
-        <button type="submit">Entrar</button>
-      </form>
-    </section>
-
-    <footer>
-      <small>Ntalk - Contacts</small>
-    </footer>
-  </body>
-</html>
+    <button type="submit">Entrar</button>
+  </form>
+</section>
+<% include ../footer %>
