Implement the chat with socket.io

--- a/views/contatos/index.ejs
+++ b/views/contatos/index.ejs
@@ -25,7 +25,10 @@
       <tr>
         <td><%- contato.nome %></td>
         <td><%- contato.email %></td>
-        <td><a href="/contato/<%- index %>">Detalhes</a></td>
+        <td>
+          <a href="/contato/<%- index %>">Detalhes</a>
+          <a href="/chat">Conversar</a>
+        </td>
       </tr>
     <% }) %>
     </tbody>
