--- a/views/chat/index.ejs
+++ b/views/chat/index.ejs
@@ -5,7 +5,6 @@
 
 <section>
   <pre id="chat"></pre>
-  <input type="hidden" id="nome" value="<%- usuario.nome %>">
   <input type="text" id="msg" placeholder="Mensagem">
   <button onclick="enviar();">Enviar</button>
 </section>
@@ -15,14 +14,13 @@
   var socket = io.connect('http://localhost:3000');
 
   socket.on('send-client', function (msg) {
-    document.getElementById('chat').innerHTML += msg;
+    var chat = document.getElementById('chat');
+    chat.innerHTML += msg;
   });
 
   var enviar = function() {
-    var nome = document.getElementById('nome').value;
-    var msg = document.getElementById('msg').value;
-
-    socket.emit('send-server', {nome: nome, msg: msg});
+    var msg = document.getElementById('msg');
+    socket.emit('send-server', msg.value);
   };
 </script>
 
