--- a/views/chat/index.ejs
+++ b/views/chat/index.ejs
@@ -1,4 +1,23 @@
 <% include ../header %>
+
+<script src="/socket.io/socket.io.js"></script>
+<script>
+  var socket = io.connect('http://localhost:3000');
+
+  socket.emit('join', '<%- sala %>');
+
+  socket.on('send-client', function (msg) {
+    document.getElementById('chat').innerHTML += msg;
+  });
+
+  var enviar = function() {
+    var msg = document.getElementById('msg');
+    socket.emit('send-server', msg.value);
+    msg.value = '';
+    msg.focus();
+  };
+</script>
+
 <header>
   <h2>Ntalk - Chat</h2>
 </header>
@@ -8,21 +27,6 @@
   <input type="text" id="msg" placeholder="Mensagem">
   <button onclick="enviar();">Enviar</button>
 </section>
-
-<script src="/socket.io/socket.io.js"></script>
-<script>
-  var socket = io.connect('http://localhost:3000');
-
-  socket.on('send-client', function (msg) {
-    var chat = document.getElementById('chat');
-    chat.innerHTML += msg;
-  });
-
-  var enviar = function() {
-    var msg = document.getElementById('msg');
-    socket.emit('send-server', msg.value);
-  };
-</script>
 
 <% include ../exit %>
 <% include ../footer %>
