--- a/views/contatos/index.ejs
+++ b/views/contatos/index.ejs
@@ -27,12 +27,14 @@
         <td><%- contato.email %></td>
         <td>
           <a href="/contato/<%- index %>">Detalhes</a>
-          <a href="/chat">Conversar</a>
+          <a href="/chat" id="chat_<%- contato.email %>">Conversar</a>
         </td>
       </tr>
     <% }) %>
     </tbody>
   </table>
 </section>
+
+<% include notify_script %>
 <% include ../exit %>
 <% include ../footer %>
