--- a/views/contatos/index.ejs
+++ b/views/contatos/index.ejs
@@ -8,15 +8,16 @@
   <form action="/contato" method="post">
     <input type="text" name="contato[nome]" placeholder="Nome">
     <input type="text" name="contato[email]" placeholder="E-mail">
-    <button type="submit">Cadastrar</button>
+    <button type="submit" class="btn btn-primary">Cadastrar</button>
   </form>
 
-  <table>
+  <table class="table">
     <thead>
       <tr>
         <th>Nome</th>
         <th>E-mail</th>
-        <th>Ação</th>
+        <th>Status</th>
+        <th>Ação</th>
       </tr>
     </thead>
 
@@ -25,6 +26,9 @@
       <tr>
         <td><%- contato.nome %></td>
         <td><%- contato.email %></td>
+        <td>
+          <span id="notify_<%- contato.email %>">Offline</span>
+        </td>
         <td>
           <a href="/contato/<%- index %>">Detalhes</a>
           <a href="/chat" id="chat_<%- contato.email %>">Conversar</a>
