--- a/views/contatos/notify_script.ejs
+++ b/views/contatos/notify_script.ejs
@@ -1,9 +1,27 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
   var socket = io.connect('http://localhost:3000');
+  var notify = function(data) {
+    var id = 'notify_' + data.email;
+    var notify = document.getElementById(id);
+
+    if (notify) {
+      notify.textContent = data.msg;
+    }
+  };
+
+  socket.on('notify-onlines', function(email) {
+    notify({email: email, msg: 'Online'});
+  });
+
+  socket.on('notify-offlines', function(email) {
+    notify({email: email, msg: 'Offline'});
+  });
 
   socket.on('new-message', function(data) {
-    var chat = document.getElementById('chat_' + data.email);
-    chat.href = '/chat?sala=' + data.sala;
+    notify({email: data.email, msg: 'Mensagem'});
+    var id = 'chat_' + data.email;
+    var chat = document.getElementById(id);
+    chat.href += '/?sala=' + data.sala;
   });
 </script>
