--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -12,7 +12,7 @@
     <input type="text" name="usuario[email]" placeholder="E-mail">
     <br>
 
-    <button type="submit">Entrar</button>
+    <button type="submit" class="btn btn-primary">Entrar</button>
   </form>
 </section>
 <% include ../footer %>
