--- a/views/contatos/edit.ejs
+++ b/views/contatos/edit.ejs
@@ -4,7 +4,7 @@
 </header>
 
 <section>
-  <form action="/contato/<%- id %>?_method=put" method="post">
+  <form action="/contato/<%- contato._id %>?_method=put" method="post">
     <label>Nome:</label>
     <input type="text" name="contato[nome]" value="<%- contato.nome %>">
 
